Increase the size of the container and also the Java heap space